--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+blockchain_near/rust/obei_ob_near_core/target/
 blockchain_near/rust/obei_ob_near_core/target/.rustc_info.json
 blockchain_near/rust/obei_ob_near_core/target/debug/.cargo-lock
 blockchain_near/rust/obei_ob_near_core/target/debug/.fingerprint/ahash-38b3f8ea3b2bb856/dep-lib-ahash
