--- a/.gitignore
+++ b/.gitignore
@@ -1236,3 +1236,4 @@ blockchain_near/rust/obei_ob_near_core/target/debug/obei_ob_near_core.dll.exp
 blockchain_near/rust/obei_ob_near_core/target/debug/obei_ob_near_core.dll.lib
 blockchain_near/rust/obei_ob_near_core/target/debug/obei_ob_near_core.pdb
 blockchain_near/rust/obei_ob_near_core/target/CACHEDIR.TAG
+blockchain_near/rust/open-block-ei-open-bank-near-core/target/.rustc_info.json
