--- a/blockchain_near/rust/open-block-ei-open-bank-near-core/Cargo.toml
+++ b/blockchain_near/rust/open-block-ei-open-bank-near-core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "obei_ob_near_core"
+name = "open-block-ei-open-bank-near-core"
 version = "0.1.0"
 authors = ["Block Star Logic"]
 edition = "2018"
@@ -11,7 +11,7 @@ crate-type = ["cdylib", "rlib"]
 near-sdk = "3.1.0"
 chrono = "0.4.19"
 serde = "1.0.57"
-# obei_or_near_core = { path= "C:/work/in_repo/open-roles/blockchain_near/rust/obei_or_near_core" }
+open-block-ei-open-roles-near-core = "0.1.0"
 
 [profile.release]
 codegen-units = 1
