--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,48 @@ blockchain_near/rust/open-block-ei-open-bank-near-core/node_modules/.package-loc
 *.lock
 *.json
 blockchain_near/rust/open-block-ei-open-bank-near-core/.project
+*.TAG
+*.timestamp
+*.exe
+*.d
+*.pdb
+*.txt
+*.lib
+*.o
+*.c
+*.yml
+*.ll
+*.a
+*.obj
+*.cfg
+*.sh
+*.sub
+*.xsl
+*.h
+*.md
+*.ac
+*.guess
+*.vcxproj
+*.filters
+*.cpp
+*.cpp
+*.py
+*.c
+*.c
+*.c
+*.in
+*.m4
+*.sln
+*.c
+*.sh
+*.dll
+*.rmeta
+*.rlib
+*.wasm
+*.bin
+*.sh
+*.exp
+*.c
+*.sh
+*.sh
+*.c
