--- a/blockchain_near/rust/open-block-ei-open-bank-near-core/Cargo.toml
+++ b/blockchain_near/rust/open-block-ei-open-bank-near-core/Cargo.toml
@@ -12,6 +12,7 @@ near-sdk = "3.1.0"
 chrono = "0.4.19"
 serde = "1.0.57"
 open-block-ei-open-roles-near-core = "0.1.0"
+num = "0.4.0"
 
 [profile.release]
 codegen-units = 1
